2012-03-27  Jonathan Wakely  <jwakely.gcc@gmail.com>

	* include/std/type_traits (result_of): Fix handling of cv-quals.
	* testsuite/20_util/result_of/1.cc: New.
	* testsuite/20_util/result_of/2.cc: New.
	* testsuite/20_util/declval/requirements/1_neg.cc: Adjust dg-error
	line numbers.
	* testsuite/20_util/make_signed/requirements/typedefs_neg.cc:
	Likewise.
	* testsuite/20_util/make_unsigned/requirements/typedefs_neg.cc:
	Likewise.

2012-03-23  David S. Miller  <davem@davemloft.net>

	* config/abi/post/sparc-linux-gnu/baseline_symbols.txt: Update.

2012-03-23  Benjamin Kosnik  <bkoz@redhat.com>

	* scripts/testsuite_flags.in (--cxxflags): Let CXXFLAGS set -g -O2.
	* testsuite/lib/libstdc++.exp: Same.

2012-03-23  Paolo Carlini  <paolo.carlini@oracle.com>

	* include/bits/forward_list.h: Slightly tweak two comments.

2012-03-22  Benjamin Kosnik  <bkoz@redhat.com>

	* doc/Makefile.am: XML output names have only .xml suffix.
	* doc/Makefile.in: Regenerate.

2012-03-22  Paolo Carlini  <paolo.carlini@oracle.com>

	* include/std/array (array<>::at(size_type) const): Fix version
	for undefined __EXCEPTIONS.

2013-03-21  Andreas Tobler  <andreast@fgznet.ch>

	* testsuite/23_containers/vector/bool/modifiers/insert/31370.cc:
	Skip this test on powerpc64-*-freebsd*.

2012-03-20  Jonathan Wakely  <jwakely.gcc@gmail.com>

	* include/bits/stl_list.h (list::_M_size): Use NSDMI.
	* testsuite/23_containers/list/requirements/dr438/assign_neg.cc:
	Adjust line numbers.
	* testsuite/23_containers/list/requirements/dr438/
	constructor_1_neg.cc: Likewise.
	* testsuite/23_containers/list/requirements/dr438/
	constructor_2_neg.cc: Likewise.
	* testsuite/23_containers/list/requirements/dr438/insert_neg.cc:
	Likewise.

2012-03-19  Paweł Sikora  <pawel.sikora@agmk.net>

	PR libstdc++/52540
	* include/Makefile.am (c++config.h): Fix sed rule to not break
	the _GLIBCXX_EXTERN_TEMPLATE redefinition.
	* include/Makefile.in: Regenerate.

2012-03-19  Paolo Carlini  <paolo.carlini@oracle.com>
